<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="start_polling">Start polling</string>
    <string name="stop_polling">Stop polling</string>
    <string name="new_pictures_title">New PhotoGallery Pictures</string>
    <string name="new_pictures_text">You have new pitures in PhotoGalery.</string>
    <string name="amount_of_photos_in_page_string">Amount of photos in page</string>
    <string name="amount_of_photos_in_row_string">Amount of photos in row</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="polling_enabled_string">Polling enabled</string>
    <string name="network_settings_string">NETWORK SETTINGS</string>
    <string name="gallery_view_settings_stirng">GALLERY VIEW SETTINGS</string>
    <string name="menu_settings_string">Settings</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="fullscreen_photo_image_description"> Fullscreen photo dialog transparent image</string>
    <string name="fullscreen_photo_close_btn_description">Fullscreen photo dialog close button image</string>
    <string name="fullscreen_photo_save_image_btn_description">Fullscreen photo dialog save photo button image</string>
    <string name="fullscreen_photo_go_to_web_btn_description">Fullscreen photo dialog go to web button image</string>

</resources>
