<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dima.photogallery.Activities.Settings.SettingsActivityFragment"
    tools:showIn="@layout/activity_settings"

    android:orientation="vertical"
    android:background="?attr/colorControlHighlight"
    android:weightSum="1">


    <TextView
        android:id="@+id/network_settings_text_view"
        android:text="@string/network_settings_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:text="@string/polling_enabled_string"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:id="@+id/polling_enabled_setting"
            android:layout_weight="4"
            tools:text="Polling enabled"
            android:layout_marginLeft="10dp"/>

        <CheckBox
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:id="@+id/polling_enabled_checkbox"
            android:layout_weight="1"
            />
    </LinearLayout>

    <TextView
        android:text="@string/gallery_view_settings_stirng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_weight="0.04"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:text="@string/amount_of_photos_in_page_string"
            android:layout_width="192dp"
            android:layout_height="match_parent"
            android:id="@+id/amount_of_photos_in_page_string"
            android:layout_weight="4"
            android:layout_marginLeft="10dp"/>

        <Spinner
            android:id="@+id/photos_per_page_spinner"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:text="@string/amount_of_photos_in_row_string"
            android:layout_width="192dp"
            android:layout_height="match_parent"
            android:id="@+id/amount_of_photos_in_row_string"
            android:layout_weight="4"
            android:layout_marginLeft="10dp"/>

        <Spinner
            android:id="@+id/photos_per_row_spinner"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>